[gd_scene load_steps=12 format=2]

[ext_resource path="res://MesaRecarregador/mesaRecarregador.gd" type="Script" id=1]
[ext_resource path="res://MesaRecarregador/mesa.png" type="Texture" id=2]
[ext_resource path="res://botao_spritesheet.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "default",
"speed": 9.0
} ]

[node name="MesaRecarregador" type="StaticBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -4.76837e-07, -4.76837e-07 )
scale = Vector2( 0.25, 0.228571 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="BotaoSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -13.3249 )
scale = Vector2( 0.432238, 0.426519 )
frames = SubResource( 3 )

[node name="Label" type="Label" parent="BotaoSprite"]
anchor_left = 0.281
anchor_top = 0.281
anchor_right = 0.719
anchor_bottom = 0.719
margin_left = -15.992
margin_top = -15.992
margin_right = -16.008
margin_bottom = -16.008
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "E"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="frame_changed" from="BotaoSprite" to="." method="_on_BotaoSprite_frame_changed"]
